# libPOG

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md  libPOG.sln
client/: client.vcxproj  client.vcxproj.filters
client/src/: HTTPClient.cpp  HTTPClient.h  HTTPSClient.cpp  HTTPSClient.h  bufer.h  buffer.h  client.cpp  client.h  clientStatus.h  main.cpp  string.cpp  string.h  stringUtils.cpp
client/src/HTTP/: HTTPClient.h
client/src/HTTPS/: HTTPSClient.cpp  HTTPSClient.h
client/test/: main.cpp
dependencies/include/openssl/: cmp.h  ssl.h
dependencies/openssl/include/openssl/: bio.h  configuration.h
dependencies/openssl/x64/lib/: libcrypto.lib
dependencies/openssl/x86/lib/: libcrypto.lib  libssl.lib
include/openssl/: x509_vfy.h
lib/: libssl.lib
src/: HTTPClient.cpp  HTTPClient.h  HTTPSClient.cpp  HTTPSClient.h  buffer.h  dataBuffer.h  stringUtils.cpp  stringUtils.h
test/: main.cpp
